[gd_scene load_steps=5 format=3 uid="uid://dgqllvtbfivgm"]

[ext_resource type="Script" uid="uid://8s5g2h0wqrv0" path="res://scripts/interact_ui1.gd" id="1_gucf5"]
[ext_resource type="FontFile" uid="uid://b2dj0wvhrnjk" path="res://fonts/04B_30__.TTF" id="2_tcxth"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jgog5"]
bg_color = Color(0.403455, 0.624377, 0.809074, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_v0wli"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[node name="InteractUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gucf5")

[node name="InteractBackground" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -480.0
offset_top = -262.5
offset_right = 480.0
offset_bottom = 262.5
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_jgog5")

[node name="InteractHeading" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -447.0
offset_top = -203.0
offset_right = 447.0
offset_bottom = -101.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/normal_font = ExtResource("2_tcxth")
theme_override_font_sizes/normal_font_size = 46
text = "Default Heading"

[node name="InteractParagraph" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.017
offset_left = 143.0
offset_top = 202.0
offset_right = 990.416
offset_bottom = 531.0
theme_override_fonts/normal_font = ExtResource("2_tcxth")
theme_override_font_sizes/normal_font_size = 32
text = "Default Paragraph Description"

[node name="CloseButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.029
anchor_bottom = 0.069
offset_left = 972.0
offset_top = 84.0
offset_right = 1000.59
offset_bottom = 104.288
grow_horizontal = 0
theme_override_fonts/font = ExtResource("2_tcxth")
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_v0wli")
text = "X"

[connection signal="button_down" from="CloseButton" to="." method="_on_close_button_button_down"]
